deployment/stacks/service/base/template/network-policy/uec-tools-sample-service-allow-external-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: PROJECT_GROUP_SHORT_TO_REPLACE-sample-service-allow-external-ingress
spec:
  podSelector:
    matchLabels:
      app: service1
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 443
